Using ASIO (Boost.Asio) instead of muduo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # 查找依赖
 find_package(Protobuf REQUIRED)
 find_package(ZLIB REQUIRED)
-find_library(MUDUO_BASE muduo_base HINTS /usr/local/lib /usr/lib)
-find_library(MUDUO_NET muduo_net HINTS /usr/local/lib /usr/lib)
+find_package(Boost REQUIRED COMPONENTS system)
 find_library(ZOOKEEPER_MT zookeeper_mt)
 
-# 检查 Muduo 是否找到
-if(NOT MUDUO_BASE OR NOT MUDUO_NET)
-    message(FATAL_ERROR "Muduo libraries not found. Please install Muduo.")
+# 检查 Boost 是否找到
+if(NOT Boost_FOUND)
+    message(FATAL_ERROR "Boost libraries not found. Please install Boost.")
 endif()
 
 # 设置输出目录
@@ -26,6 +25,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 include_directories(${Protobuf_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_BINARY_DIR}/protos) # Protobuf 生成文件
+include_directories(${Boost_INCLUDE_DIRS})
 
 # 添加子目录
 add_subdirectory(protos)
